Fix modal on mobile browsers (#22)
* Edge

* Fixed in Chrome on iOS

* TODO: new screenshots everywhere

* typo

* relock

* relock

* Fully relock

* revert

* current build time

* revert

* New screens

* Safari macos

* iphone

* revert, out of scope

--- a/src/modal.scss
+++ b/src/modal.scss
@@ -21,7 +21,7 @@ $body: "div##{$prefix}dialog-body";
 
 #{$dialog} {
     // Sizing
-    min-width: 600px;
+    min-width: min(600px, 100vw - 2rem);
     max-width: 900px;
     max-height: 80vh;
     // Positioning
